--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "just-reactive-jsx",
   "module": "index.tsx",
   "type": "module",
+  "scripts": {
+    "dev": "bun run src/server.ts"
+  },
   "devDependencies": {
     "@maverick-js/signals": "5.11.4",
     "@types/jsdom": "21.1.4",
     "@types/jsdom-global": "3.0.6",
     "@types/react": "18.2.34",
-    "bun-types": "latest",
+    "bun-types": "1.0.10",
     "jsdom": "22.1.0",
     "jsdom-global": "3.0.2",
     "pretty-format": "29.7.0",
