--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "module": "index.tsx",
   "type": "module",
   "scripts": {
-    "dev": "bun run src/server.ts"
+    "dev": "bun --hot src/server.tsx"
   },
   "devDependencies": {
     "@maverick-js/signals": "5.11.4",
     "@types/jsdom": "21.1.4",
     "@types/jsdom-global": "3.0.6",
     "@types/react": "18.2.34",
+    "@types/react-dom": "18.2.15",
     "bun-types": "1.0.10",
     "jsdom": "22.1.0",
     "jsdom-global": "3.0.2",
     "pretty-format": "29.7.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "5.2.2"
   }
 }
