--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@maverick-js/signals": "5.11.4",
+    "@swc/core": "1.3.96",
     "@types/jsdom": "21.1.4",
     "@types/jsdom-global": "3.0.6",
     "@types/react": "18.2.34",
