--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@types/react-dom": "18.2.15",
     "@typescript/lib-dom": "npm:@types/web",
     "add": "2.0.6",
+    "autoprefixer": "10.4.16",
+    "bun-plugin-tailwindcss": "0.0.4",
     "bun-types": "1.0.10",
     "jsdom": "22.1.0",
     "jsdom-global": "3.0.2",
+    "postcss": "8.4.31",
     "pretty-format": "29.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   }
 }
