got rid of react

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,14 @@
     "strict": true,
     "downlevelIteration": true,
     "skipLibCheck": true,
-    "jsx": "react-jsx",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
     "baseUrl": "src",
     "types": [
       "bun-types" // add Bun global
-    ]
+    ],
+    "jsx": "react-jsx",
+    "jsxImportSource": "runtime"
   }
 }
