--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "just-reactive-jsx",
-  "module": "index.tsx",
-  "type": "module",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "bun --watch src/server/server.tsx",
     "hydration_test": "bun --watch hydration_test/server.ts"
