--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "just-reactive-jsx",
   "module": "index.tsx",
-  "type": "module",
-  "scripts": {
-    "dev": "bun --watch src/server/server.tsx",
-    "hydration_test": "bun --watch hydration_test/server.ts"
-  },
   "devDependencies": {
     "@maverick-js/signals": "5.11.4",
     "@swc/core": "1.3.96",
@@ -25,6 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.5",
-    "typescript": "5.2.2"
-  }
+    "typescript": "5.2.2",
+    "zod": "3.22.4"
+  },
+  "scripts": {
+    "dev": "bun cli/index.ts dev",
+    "hydration_test": "bun --watch hydration_test/server.ts"
+  },
+  "type": "module"
 }
