--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "just-reactive-jsx",
   "module": "index.tsx",
   "devDependencies": {
+    "@elysiajs/html": "0.8.0",
     "@maverick-js/signals": "5.11.4",
     "@swc/core": "1.3.96",
     "@types/jsdom": "21.1.4",
@@ -13,6 +14,8 @@
     "autoprefixer": "10.4.16",
     "bun-plugin-tailwindcss": "0.0.4",
     "bun-types": "1.0.10",
+    "chalk": "5.3.0",
+    "elysia": "0.8.8",
     "jsdom": "22.1.0",
     "jsdom-global": "3.0.2",
     "postcss": "8.4.31",
