--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,11 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
     "types": [
       "bun-types" // add Bun global
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "runtime"
+    "jsxImportSource": "src/runtime"
   }
 }
