separate compilation and rendering for ssr now

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "zod": "3.22.4"
   },
   "scripts": {
-    "dev": "bun --hot cli/index.ts dev",
+    "dev": "bun --watch cli/index.ts dev",
     "hydration_test": "bun --watch hydration_test/server.ts"
   },
   "type": "module"
