--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "just-reactive-jsx",
   "module": "index.tsx",
   "devDependencies": {
-    "@elysiajs/html": "0.8.0",
     "@maverick-js/signals": "5.11.4",
     "@swc/core": "1.3.96",
+    "@types/bun": "1.0.0",
     "@types/jsdom": "21.1.4",
     "@types/jsdom-global": "3.0.6",
     "@types/react": "18.2.34",
