--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "just-reactive-jsx",
-  "module": "index.tsx",
+  "private": true,
+  "scripts": {
+    "dev": "bun --watch cli/index.ts dev",
+    "hydration_test": "bun --watch hydration_test/server.ts"
+  },
   "devDependencies": {
     "@maverick-js/signals": "5.11.4",
     "@swc/core": "1.3.102",
@@ -19,10 +23,5 @@
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "zod": "3.22.4"
-  },
-  "scripts": {
-    "dev": "bun --watch cli/index.ts dev",
-    "hydration_test": "bun --watch hydration_test/server.ts"
-  },
-  "type": "module"
+  }
 }
