--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
     "zod": "3.22.4"
+  },
+  "dependencies": {
+    "recast": "0.23.4"
   }
 }
